--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "homepage": "https://github.com/Emm152/Awesome-app2023/readme.md",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "http-status": "^1.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
