--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/Emm152/Awesome-app2023/readme.md",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "http-status": "^1.6.2"
   },
   "devDependencies": {
